<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DontTouchWhite</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
 	<string name="back">返回</string>
    <string name="share">分享</string>
    <string name="restart">重新开始</string>
    <string name="new_record">新记录</string>
    <string name="fail">失败</string>
    <string name="classic_mode">经典模式</string>
    
</resources>
