<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/win_lose_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/normallack" >
    
	<TextView 
	    android:id="@+id/text_game_mode"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:text="@string/classic_mode"
	    android:textColor="@android:color/darker_gray"
	    android:textSize="@dimen/small"
	    android:gravity="center"
	    android:layout_weight="1" />
	
	<TextView 
	    android:id="@+id/text_new_record_title"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:text="@string/new_record"
	    android:textColor="@android:color/white"
	    android:textSize="@dimen/small"
	    android:gravity="center"
	    android:visibility="gone"
	    android:layout_weight="1" />
	
	<TextView 
	    android:id="@+id/text_fail_title"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:text="@string/fail"
	    android:textColor="@android:color/white"
	    android:textSize="@dimen/xlarge"
	    android:gravity="center"
	    android:visibility="gone"
	    android:layout_weight="3" />
	
	<TextView
	    android:id="@+id/text_record" 
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:text="9.123"
	    android:textColor="@android:color/white"
	    android:textSize="@dimen/middle"
	    android:gravity="center"
	    android:layout_weight="2" />
	
	<TextView
	    android:id="@+id/text_best__record" 
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:text="最高记录 9.144"
	    android:textColor="@android:color/white"
	    android:textSize="@dimen/small"
	    android:gravity="center"
	    android:layout_weight="2" />
	
	<Button 
	    android:id="@+id/button_restart"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:text="@string/restart"
	    android:textSize="@dimen/large"
	    android:textColor="@color/niceblack"
	    android:background="@android:color/white"
	    android:layout_weight="2" />
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="2"
	    android:orientation="horizontal"
	    android:divider="#ff0000" >
	    
	    <Button
	        android:id="@+id/button_share"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/share"
	        android:textSize="@dimen/small"
	        android:textColor="@android:color/white"
	        android:layout_weight="1"
	        android:background="@color/normallack" />
	    
	    <Button
	        android:id="@+id/button_back"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/back"
	        android:textSize="@dimen/small"
	        android:textColor="@android:color/white"
	        android:layout_weight="1"
	        android:background="@color/normallack" />
	    
	</LinearLayout>
</LinearLayout>
